--- a/index.html
+++ b/index.html
@@ -118,11 +118,7 @@ ul.task-list li input[type="checkbox"] {
     <i class="bi bi-linkedin"></i>
      <span class="about-link-text">LinkedIn</span>
   </a>
-  <a href="https://instagram.com" class="about-link" rel="" target="">
-    <i class="bi bi-instagram"></i>
-     <span class="about-link-text">Instagram</span>
-  </a>
-  <a href="https://github.com/MatthewBrown14/MatthewBrown14" class="about-link" rel="" target="">
+  <a href="https://github.com/MatthewBrown14/MatthewBrown14.github.io" class="about-link" rel="" target="">
     <i class="bi bi-github"></i>
      <span class="about-link-text">GitHub</span>
   </a>
@@ -140,11 +136,11 @@ ul.task-list li input[type="checkbox"] {
 <p>I am a sophmore attending suny geneseo as an accounting major. I am from the hudson valley and went to Pine Bush highschool. I am very intrested with trading stocks and typically trade stocks everyday.</p>
 <section id="education" class="level2">
 <h2 data-anchor-id="education">Education</h2>
-<p>State University of New York at Geneseo | Geneseo, NY <br> B.S. in Data Analytics | Aug 2022 - May 2026 <br> Minor in Business Administration</p>
+<p>Pine Bush Highschool at Pine Bush | Pine Bush, NY <br> High School Diploma | Sep 2018 - JUne 2022 <br></p>
 </section>
 <section id="experience" class="level2">
 <h2 data-anchor-id="experience">Experience</h2>
-<p>Starbucks Analytics | Data Analyst Intern | May 2024 - Aug 2024</p>
+<p>Thruway Sporting Goods | Cashier | May 2022 - Aug 2022</p>
 
 
 </section>
